TP5 Base TP4 commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,13 @@
 <resources>
+
     <string name="app_name">Cash Converter App</string>
     <string name="Button_convert">Convert</string>
     <string name="hint">Tape here...</string>
     <string name="result_box">Result :</string>
     <string name="tx_box">tx...</string>
-    <string name="Label_money">Amont of money :</string>
+    <string name="Label_money">Amont of money (€) :</string>
     <string name="Label_tx">tx...</string>
     <string name="curent_monnaie">Current monnaie :</string>
     <string name="dest_monnaie">Dest monnaie :</string>
-
-    <string-array name="monnaie_array">
-        <item>Euro</item>
-        <item>Dollar</item>
-        <item>Yen</item>
-        <item>Peso</item>
-    </string-array>
 
 </resources>
