TP5 final with manual rate change
Signed-off-by: Alexdesc <descamps.professionnel@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,8 @@
     <string name="Label_tx">tx...</string>
     <string name="curent_monnaie">Current monnaie :</string>
     <string name="dest_monnaie">Dest monnaie :</string>
+    <string name="change_monnaie">Currency to modify :</string>
+    <string name="Button_change_rate">Modify</string>
+    <string name="Label_rate">New rate :</string>
 
 </resources>
