Get info of current location
Signed-off-by: Alexdesc <descamps.professionnel@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,8 @@
     <string name="change_monnaie">Currency to modify :</string>
     <string name="Button_change_rate">Modify</string>
     <string name="Label_rate">New rate :</string>
+    <string name="Dest_Location">Enter the destination address :</string>
+    <string name="Current_location">Current location :</string>
+    <string name="Button_locate">Locate and convert</string>
 
 </resources>
